PIRATE-3110  Fix image alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -517,7 +517,8 @@ button.btn.basket-summary-submit {
     border-width: 0;
 }
 
-.widget.image {
+.widget.image a{
+  display: block;
 }
 
 .widget.image span.image-title {
